# anyrender

./: Cargo.toml
.github/workflows/: ci.yml
crates/anyrender/: Cargo.toml
crates/anyrender/src/: filter_effects.rs  lib.rs  null_backend.rs  recording.rs  serialize.rs  types.rs
crates/anyrender/src/serialize/: mod.rs
crates/anyrender/tests/: serialize.rs
crates/anyrender_serialize/: Cargo.toml
crates/anyrender_serialize/src/: font_writer.rs  lib.rs
crates/anyrender_serialize/tests/: serialize.rs
crates/anyrender_skia/: Cargo.toml
crates/anyrender_skia/src/: cache.rs  image_renderer.rs  lib.rs  metal.rs  opengl.rs  scene.rs  vulkan.rs  window_renderer.rs
crates/anyrender_svg/: Cargo.toml
crates/anyrender_svg/src/: lib.rs
crates/anyrender_tiny_skia/: Cargo.toml
crates/anyrender_tiny_skia/src/: image_renderer.rs  lib.rs  scene.rs  window_renderer.rs
crates/anyrender_vello/: Cargo.toml
crates/anyrender_vello/src/: image_renderer.rs  scene.rs  window_renderer.rs
crates/anyrender_vello_cpu/: Cargo.toml
crates/anyrender_vello_cpu/src/: image_renderer.rs  scene.rs
crates/anyrender_vello_cpu/src/window_renderer/: mod.rs  pixels_window_renderer.rs  softbuffer_window_renderer.rs
crates/anyrender_vello_hybrid/: Cargo.toml
crates/anyrender_vello_hybrid/src/: lib.rs  scene.rs  webgl_scene.rs  window_renderer.rs
crates/pixels_window_renderer/: Cargo.toml
crates/pixels_window_renderer/src/: lib.rs
crates/rough_anyrender/: Cargo.toml  README.md
crates/rough_anyrender/examples/: animate.rs  rust_logo.rs
crates/rough_anyrender/src/: vello_generator.rs
crates/softbuffer_window_renderer/: Cargo.toml
crates/softbuffer_window_renderer/src/: lib.rs
crates/wgpu_context/: Cargo.toml
crates/wgpu_context/src/: buffer_renderer.rs  surface_renderer.rs
examples/bunnymark/: Cargo.toml
examples/bunnymark/src/: bunny.rs  main.rs
examples/player/: Cargo.toml
examples/player/src/: main.rs
examples/serialize/: Cargo.toml
examples/serialize/src/: main.rs
examples/wasm/: Cargo.toml  README.md
examples/wasm/src/: index.html  lib.rs  net.rs
examples/winit/: Cargo.toml
examples/winit/src/: main.rs
