[package]
name = "anyrender"
description = "2D Canvas abstraction"
version = "0.7.0"
documentation = "https://docs.rs/anyrender"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["serialize"]
serialize = [
  "dep:serde",
  "dep:serde-jsonlines",
  "kurbo/serde",
  "peniko/serde",
]

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
serde-jsonlines = { workspace = true, optional = true }