[package]
name = "anyrender_serialize"
description = "Serialization of recorded scenes to a portable zip format"
version = "0.1.0"
documentation = "https://docs.rs/anyrender"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
subsetting = ["dep:klippa", "dep:read-fonts"]
woff2 = ["dep:ttf2woff2"]

[dependencies]
anyrender = { workspace = true, features = ["serde"] }
peniko = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
image = { workspace = true, features = ["png"] }
klippa = { workspace = true, optional = true }
read-fonts = { workspace = true, optional = true }
ttf2woff2 = { workspace = true, optional = true }
wuff = { workspace = true }

[dev-dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
read-fonts = { workspace = true }
serde_json = { workspace = true }
wuff = { workspace = true }
zip = { workspace = true }
