[package]
name = "serialize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
image = { workspace = true, features = ["png"] }
anyrender = { workspace = true, features = ["serialize"] }
anyrender_vello_cpu = { workspace = true }
